navbar height and overflow fixing

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -2,7 +2,7 @@
 .navbar-body {
   position: fixed;
   width: 99.3vw;
-  height: 3rem;
+  height: auto;
   box-sizing: border-box;
   z-index: 1;
   top: 0;
